Update api, implement simple getter-queries.
